Fix ASF nav item vertical alignment in header

--- a/docs/assets/stylesheets/global.css
+++ b/docs/assets/stylesheets/global.css
@@ -342,6 +342,8 @@ h6, .h6, .md-typeset h6 {
 /* ASF menu (top-right dropdown) */
 .md-header__asf {
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .md-header__asf-trigger {
